# pixelart

./: .gitignore  README.md  __main__.py  pyproject.toml
palettes/: default.py  protogia.py  style.css
pixelart/: __main__.py
