[tool.poetry]
name = "pixelart"
version = "0.1.0"
description = "Converts given images into pixelart-styled images with given resolution, size and colorpalette."
authors = ["protogia <goldengrizz01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
argcomplete = "^3.2.3"
rich-argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
